Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "DAN DA DAN Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185660-uB8RUMBGovGr.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Ghost/Aliens/Shounen/Primarily Teen Cast/Surreal Comedy/Urban Fantasy/Heterosexual/Female Protagonist/Male Protagonist/Artificial Intelligence/Cult/Tokusatsu/Exorcism/Henshin/Body Horror/Kaiju\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)\n<br><br>\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>DAN DA DAN: EVIL EYE</b> before the Japanese premiere was pre-screened in advance in theaters on June 6, 2025 in North America by GKIDS Films and June 7 and 8 in Europe by Piece of Magic Entertainment and Animation Digital Network.</i>"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Ghost/Aliens/Shounen/Primarily Teen Cast/Surreal Comedy/Urban Fantasy/Heterosexual/Male Protagonist/Female Protagonist/Artificial Intelligence/Cult/Tokusatsu/Exorcism/Henshin/Body Horror/Kaiju\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)\n<br><br>\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>DAN DA DAN: EVIL EYE</b> before the Japanese premiere was pre-screened in advance in theaters on June 6, 2025 in North America by GKIDS Films and June 7 and 8 in Europe by Piece of Magic Entertainment and Animation Digital Network.</i>"
     },
     {
       "id": "tt15765670",
@@ -40,14 +40,14 @@
       "type": "series",
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
-      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Male Protagonist/Monster Boy/Rural/Cosmic Horror/Mythology/Denpa/Primarily Teen Cast/Unrequited Love/Seinen/POV/School/Curses\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Monster Boy/Male Protagonist/Rural/Cosmic Horror/Mythology/Denpa/Primarily Teen Cast/Unrequited Love/Seinen/School/Curses/POV\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
     },
     {
       "id": "tt36988358",
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-7uzY4fA3hokP.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Primarily Child Cast/Philosophy/Aliens/Revenge/Delinquents/Female Protagonist/Shapeshifting/POV/Rural/Ensemble Cast/Space\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Primarily Child Cast/Philosophy/Aliens/Delinquents/Female Protagonist/Shapeshifting/Revenge/POV/Rural/Ensemble Cast/Space\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt15975122",
@@ -103,14 +103,14 @@
       "type": "series",
       "name": "Grand Blue Dreaming Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-tThxqSRn3At1.jpg",
-      "description": "Genres: Comedy, Slice of Life, Sports\nTags:Seinen/College/Otaku Culture/School Club/Coastal/Male Protagonist/Nudity/Slapstick/Scuba Diving/Surreal Comedy/Primarily Adult Cast/Ensemble Cast\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life, Sports\nTags:Seinen/College/Otaku Culture/School Club/Coastal/Male Protagonist/Nudity/Slapstick/Scuba Diving/Surreal Comedy/Crossdressing/Primarily Adult Cast/Ensemble Cast\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32344704",
       "type": "series",
       "name": "TOUGEN ANKI",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177474-oHil1yLWldfl.jpg",
-      "description": "Genres: Action, Mystery, Supernatural\nTags:Demons/Shounen/Male Protagonist/Shapeshifting/Guns/Urban Fantasy/Revenge/Henshin/CGI/Super Power/Primarily Male Cast\nThe bloodlines of “Oni” and “Momotarou” have been passed down among certain humans for generations.<br>\n<br>\nLong ago, the Oni, aware of their own ferocity, lived in seclusion. However, their peace was shattered by an invasion led by Momotarou.\nOver thousands of years, these two factions formed the “Momotarou Agency” and the “Oni Agency,” respectively, and have been locked in conflict ever since.<br>\n<br>\nThe protagonist, Shiki Ichinose, suddenly learns of his Oni lineage following an unexpected attack by Momotarou. This revelation sets Shiki on a path to discover the destiny that lies within his blood — a meeting with the Oni dwelling within him.<br>\n<br>\n—A new generation of dark heroics begins here in this tale of demons!\n<br>\n<br>\n(Source: Official Site)"
+      "description": "Genres: Action, Mystery, Supernatural\nTags:Demons/Shounen/Male Protagonist/Shapeshifting/Guns/Urban Fantasy/Revenge/CGI/Henshin/Super Power/Primarily Male Cast\nThe bloodlines of “Oni” and “Momotarou” have been passed down among certain humans for generations.<br>\n<br>\nLong ago, the Oni, aware of their own ferocity, lived in seclusion. However, their peace was shattered by an invasion led by Momotarou.\nOver thousands of years, these two factions formed the “Momotarou Agency” and the “Oni Agency,” respectively, and have been locked in conflict ever since.<br>\n<br>\nThe protagonist, Shiki Ichinose, suddenly learns of his Oni lineage following an unexpected attack by Momotarou. This revelation sets Shiki on a path to discover the destiny that lies within his blood — a meeting with the Oni dwelling within him.<br>\n<br>\n—A new generation of dark heroics begins here in this tale of demons!\n<br>\n<br>\n(Source: Official Site)"
     },
     {
       "id": "tt32991344",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Ruri Rocks",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180929-ytdzqbrOhots.jpg",
-      "description": "Genres: Adventure, Slice of Life\nTags:Outdoor Activities/Cute Girls Doing Cute Things/Primarily Female Cast/Educational/Female Protagonist/Wilderness/Iyashikei/Seinen/Rural/Found Family/College\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
+      "description": "Genres: Adventure, Slice of Life\nTags:Outdoor Activities/Cute Girls Doing Cute Things/Primarily Female Cast/Educational/Female Protagonist/Wilderness/Iyashikei/Seinen/Rural/College/Found Family\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
     },
     {
       "id": "tt36469298",
@@ -194,7 +194,7 @@
       "type": "series",
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Public Sex/Exhibitionism/Heterosexual/Primarily Female Cast/Nudity/Hypersexuality/Male Protagonist/Virginity/School/Primarily Teen Cast/Rape/Guns/Software Development/Coastal/Defloration/Psychosexual/Torture/Large Breasts/LGBTQ+ Themes/Bisexual/Threesome/Hikikomori/Gyaru\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiran Island Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Public Sex/Exhibitionism/Heterosexual/Primarily Female Cast/Hypersexuality/Nudity/Male Protagonist/Virginity/School/Primarily Teen Cast/Rape/Guns/Software Development/Coastal/Defloration/Psychosexual/Torture/Large Breasts/LGBTQ+ Themes/Bisexual/Threesome/Hikikomori/Gyaru\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiran Island Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
     },
     {
       "id": "tt14400866",
@@ -274,18 +274,18 @@
       "description": "Genres: Drama, Fantasy, Romance\nTags:Royal Affairs/Heterosexual/Marriage/Female Protagonist/Josei\nMarie, the second daughter of a poor baron’s household, is treated like a servant by her parents. Even at Marie’s birthday party, her beautiful elder sister, Anastasia, is the star. Outside, Marie bumps into Count Kyuros Granado, who falls for her at first sight. Yet, due to a misunderstanding, the Count proposes to Anastasia. After a tragic accident, Marie must marry the count instead!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt36082234",
+      "type": "series",
+      "name": "See You Tomorrow at the Food Court",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-cuRKYBlZ3uWw.jpg",
+      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Urban/Primarily Teen Cast/Primarily Female Cast/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Advertisement/School\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt35652446",
       "type": "series",
       "name": "Bad Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-cTYMOedSpXsJ.jpg",
       "description": "Genres: Comedy, Romance\nTags:School/Female Protagonist/Primarily Female Cast/Yuri/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Urban/Surreal Comedy/Female Harem/Gyaru\nYuu Yuutani is a first-year high school student with sharp eyes, large piercings and flashy two-tone hair. She's become notorious as a bad girl… but she's really not. At heart, Yuu is an incredibly good girl, but her mind is always full of thoughts of the beautiful and popular Atori Mizutori, the school’s Madonna and head of the student disciplinary committee. So, on her mission to attract the attention of Atori, Yuu decided to quit being an honor student and become a \"bad delinquent!” <br>\n<br>\n(Source: HIDIVE)"
-    },
-    {
-      "id": "tt36082234",
-      "type": "series",
-      "name": "See You Tomorrow at the Food Court",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-cuRKYBlZ3uWw.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Urban/Primarily Teen Cast/Primarily Female Cast/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Yuri/School/Advertisement/LGBTQ+ Themes\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35652489",
