Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -50,18 +50,18 @@
       "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Primarily Child Cast/Philosophy/Aliens/Female Protagonist/Delinquents/Revenge/Shapeshifting/Ensemble Cast/POV/Rural/Space\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt15975122",
-      "type": "series",
-      "name": "Call of the Night Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175914-VsbL90WzuqoM.jpg",
-      "description": "Genres: Comedy, Psychological, Romance, Slice of Life, Supernatural\nTags:Vampire/Urban Fantasy/Heterosexual/Male Protagonist/Urban/Coming of Age/Female Protagonist/Hikikomori/Shounen/Detective\nThe second season of <i>Yofukashi no Uta</i>.\n<br><br>\nKo overcomes his confusion about becoming a vampire and decides to \"like\" Nazuna, while Nazuna resolves to make Ko \"fall in love\" with her. Without understanding what \"love\" even is, the two of them spend their nights together in a frenzy. Meanwhile, Detective Uguisu Anko is closing in with her plot to kill vampires, not just Nazuna. A vampire's weakness is \"anything they were attached to when they were human\" and so they all try to get rid of this weakness before it's too late. But, Nazuna has no memory of her human life. What is Nazuna's hidden past? Why did Anko start killing vampires? And what is the \"secret\" that Nazuna and Anko share? For Ko, Nazuna, Anko, a fun \"late night\" doesn't end here... a new \"night\" begins!\n<br><br>\n(Source: HIDIVE)"
-    },
-    {
       "id": "tt17069148",
       "type": "series",
       "name": "SAKAMOTO DAYS Part 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184237-OJAksU2fsIPx.jpg",
       "description": "Genres: Action, Comedy\nTags:Urban/Assassins/Crime/Konbini/Shounen/Yakuza/Gangs/Criminal Organization/Guns/Found Family/Male Protagonist/Super Power/Primarily Adult Cast/Family Life/Gore\nThe second part of <i>SAKAMOTO DAYS</i>.<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
+    },
+    {
+      "id": "tt15975122",
+      "type": "series",
+      "name": "Call of the Night Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175914-VsbL90WzuqoM.jpg",
+      "description": "Genres: Comedy, Psychological, Romance, Slice of Life, Supernatural\nTags:Vampire/Urban Fantasy/Heterosexual/Male Protagonist/Urban/Coming of Age/Female Protagonist/Hikikomori/Shounen/Detective\nThe second season of <i>Yofukashi no Uta</i>.\n<br><br>\nKo overcomes his confusion about becoming a vampire and decides to \"like\" Nazuna, while Nazuna resolves to make Ko \"fall in love\" with her. Without understanding what \"love\" even is, the two of them spend their nights together in a frenzy. Meanwhile, Detective Uguisu Anko is closing in with her plot to kill vampires, not just Nazuna. A vampire's weakness is \"anything they were attached to when they were human\" and so they all try to get rid of this weakness before it's too late. But, Nazuna has no memory of her human life. What is Nazuna's hidden past? Why did Anko start killing vampires? And what is the \"secret\" that Nazuna and Anko share? For Ko, Nazuna, Anko, a fun \"late night\" doesn't end here... a new \"night\" begins!\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt8993398",
@@ -278,7 +278,7 @@
       "type": "series",
       "name": "See You Tomorrow at the Food Court",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-cuRKYBlZ3uWw.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Urban/Primarily Teen Cast/Primarily Female Cast/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Advertisement/School\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Teen Cast/Primarily Female Cast/Urban/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Advertisement/School\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35652446",
