--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-7uzY4fA3hokP.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Primarily Child Cast/Philosophy/Aliens/Female Protagonist/Delinquents/Revenge/Shapeshifting/Ensemble Cast/POV/Rural/Space\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Primarily Child Cast/Aliens/Philosophy/Female Protagonist/Revenge/Delinquents/Shapeshifting/Ensemble Cast/Rural/POV/Space\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt17069148",
@@ -124,7 +124,7 @@
       "type": "series",
       "name": "I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178090-1OOScJqXLjRd.png",
-      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy/Angels/Gore\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nAfter a victorious battle against Guisarme in the Lordost region, Lloyd’s pursuit of magic knows no bounds. His next goal? Holy Magic! To learn this sacred art, Lloyd and his companions visit a church, but what awaits them there…?<br><br>\n(Source: I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Official Site)"
+      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy/Angels/Gore/Female Harem\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nAfter a victorious battle against Guisarme in the Lordost region, Lloyd’s pursuit of magic knows no bounds. His next goal? Holy Magic! To learn this sacred art, Lloyd and his companions visit a church, but what awaits them there…?<br><br>\n(Source: I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Official Site)"
     },
     {
       "id": "tt33472011",
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Rent-a-Girlfriend Season 4",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-GQzJfehpQI72.png",
-      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Female Harem/Fake Relationship/Male Protagonist/Female Protagonist/Primarily Adult Cast/Unrequited Love/Shounen/Urban/Philosophy\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
+      "description": "Genres: Comedy, Romance\nTags:Female Harem/Fake Relationship/Heterosexual/Male Protagonist/Female Protagonist/Primarily Adult Cast/Unrequited Love/Shounen/Urban/Philosophy\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
     },
     {
       "id": "tt37113118",
@@ -239,18 +239,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Iyashikei/Seinen/Female Protagonist/Animals/Urban/Primarily Adult Cast/Episodic\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36271866",
-      "type": "series",
-      "name": "Solo Camping for Two",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185965-LlzTLSTBUbEA.jpg",
-      "description": "Genres: Slice of Life\nTags:Camping/Food/Outdoor Activities/Primarily Adult Cast/Educational/Seinen/Male Protagonist/Bisexual\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
-    },
-    {
       "id": "tt36988220",
       "type": "series",
       "name": "Detectives These Days Are Crazy!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180460-rZn4pp9YNqW0.jpg",
       "description": "Genres: Comedy, Mystery\nTags:Slapstick/Surreal Comedy/Detective/Crime/Ensemble Cast/Urban/Seinen/Police/Primarily Adult Cast/Gyaru\nNagumo Keiichirou was a genius high-school detective. No case was complex enough for him. But what happens to genius detectives when they get older?<br>\n<br>\nNow 35, with bad hips, running a failing detective agency with no cases to solve and struggling to pay the rent, he's at a dead end.<br>\n<br>\nIn comes a high school girl in his office who says she wants to work with him. With her help, will the out-of-touch, old-fashioned Nagumo get back the fire of his youth?<br>"
+    },
+    {
+      "id": "tt36271866",
+      "type": "series",
+      "name": "Solo Camping for Two",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185965-LlzTLSTBUbEA.jpg",
+      "description": "Genres: Slice of Life\nTags:Camping/Food/Outdoor Activities/Primarily Adult Cast/Educational/Seinen/Male Protagonist/Bisexual\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
     },
     {
       "id": "tt35677101",
