Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -12,7 +12,7 @@
       "type": "series",
       "name": "My Dress-Up Darling Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx154768-DHHvNd4MjV1p.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Cosplay/Otaku Culture/Gyaru/Fashion/Male Protagonist/Female Protagonist/Heterosexual/Seinen/Body Image/Crossdressing/Educational/Photography/LGBTQ+ Themes/Nudity/Makeup/Femboy/Chibi\nThe second season of <i>Sono Bisque Doll wa Koi wo Suru</i>.\n<br><br>\nWhen Marin Kitagawa and Wakana Gojo met, they grew close over their love for cosplay. Through interacting with classmates and making new cosplay friends, Marin and Wakana’s world keeps growing. New developments arise as Marin’s love for Wakana continues to be filled with endless excitement. In their ever-expanding world, Marin and Wakana’s story of cosplay and thrills continues!<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Cosplay/Otaku Culture/Gyaru/Fashion/Male Protagonist/Female Protagonist/Heterosexual/Seinen/Crossdressing/Body Image/Educational/Photography/LGBTQ+ Themes/Femboy/Nudity/Makeup/Chibi\nThe second season of <i>Sono Bisque Doll wa Koi wo Suru</i>.\n<br><br>\nWhen Marin Kitagawa and Wakana Gojo met, they grew close over their love for cosplay. Through interacting with classmates and making new cosplay friends, Marin and Wakana’s world keeps growing. New developments arise as Marin’s love for Wakana continues to be filled with endless excitement. In their ever-expanding world, Marin and Wakana’s story of cosplay and thrills continues!<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32612521",
@@ -40,7 +40,7 @@
       "type": "series",
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
-      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Male Protagonist/Monster Boy/Rural/Cosmic Horror/Mythology/Primarily Teen Cast/Unrequited Love/Denpa/Seinen/School/POV/CGI/Curses\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Male Protagonist/Monster Boy/Rural/Cosmic Horror/Mythology/Primarily Teen Cast/Unrequited Love/Seinen/School/POV/CGI/Curses\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
     },
     {
       "id": "tt36988358",
@@ -103,7 +103,7 @@
       "type": "series",
       "name": "Grand Blue Dreaming Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-tThxqSRn3At1.jpg",
-      "description": "Genres: Comedy, Slice of Life, Sports\nTags:Seinen/College/Otaku Culture/School Club/Coastal/Male Protagonist/Nudity/Slapstick/Scuba Diving/Surreal Comedy/Crossdressing/Primarily Adult Cast/Ensemble Cast\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life, Sports\nTags:Seinen/College/Otaku Culture/School Club/Male Protagonist/Coastal/Nudity/Slapstick/Scuba Diving/Surreal Comedy/Primarily Adult Cast/Crossdressing/Ensemble Cast/Femboy\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32344704",
@@ -138,7 +138,7 @@
       "type": "series",
       "name": "There's No Freaking Way I'll Be Your Lover! Unless...",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-jRXZ29bN61Zc.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/Female Harem/LGBTQ+ Themes/School/Primarily Teen Cast/Nudity\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/Female Harem/LGBTQ+ Themes/School/Primarily Teen Cast/Nudity/Mixed Media\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt32731400",
@@ -187,7 +187,7 @@
       "type": "series",
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Public Sex/Exhibitionism/Male Protagonist/Heterosexual/Primarily Female Cast/Hypersexuality/Nudity/School/Virginity/Guns/Software Development/Primarily Teen Cast/Rape/LGBTQ+ Themes/Psychosexual/Coastal/Defloration/Large Breasts/Threesome/Hikikomori/Gyaru/Femdom/Torture/Bisexual\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiran Island Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Exhibitionism/Public Sex/Male Protagonist/Heterosexual/Primarily Female Cast/Hypersexuality/Nudity/School/Virginity/Guns/Software Development/Primarily Teen Cast/Rape/LGBTQ+ Themes/Psychosexual/Coastal/Defloration/Large Breasts/Threesome/Hikikomori/Gyaru/Femdom/Torture/Bisexual\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiran Island Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
     },
     {
       "id": "tt36592820",
@@ -204,18 +204,18 @@
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/Male Protagonist/Arranged Marriage/School/Inseki/Shounen/Female Protagonist/Cohabitation/Idol\nThe second season of <i>Kakkou no Iinazuke</i>.<br><br>\nUmino Nagi and Amano Erika were born on the same day and swapped at birth. Nagi was raised as the son of a diner owner, and Erika the daughter of a hotel tycoon. Their parents encourage them to become engaged, and they begin life together. Soon though, infatuations arise as Nagi becomes stuck in a love quadrangle. Life and love are embroiled in epic turmoil as fate is set in motion once again!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt28100731",
-      "type": "series",
-      "name": "Reborn as a Vending Machine, I Now Wander the Dungeon Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Anthropomorphism/Meta/Martial Arts/Economics/Female Harem/Survival/Mixed Gender Harem/Heterosexual/Surreal Comedy\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
-    },
-    {
       "id": "tt32535912",
       "type": "series",
       "name": "Watari-kun's ****** Is about to Collapse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-u4wDhHlTfX9P.jpg",
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/Yandere/Kuudere/School/Heterosexual/Primarily Teen Cast/Family Life/Male Protagonist/Agriculture/Female Harem/Seinen/Nudity\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt28100731",
+      "type": "series",
+      "name": "Reborn as a Vending Machine, I Now Wander the Dungeon Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Anthropomorphism/Meta/Martial Arts/Economics/Female Harem/Survival/Mixed Gender Harem/Heterosexual/Surreal Comedy\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
     },
     {
       "id": "tt36600399",
